; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_malloc.c__expand.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_malloc.c__expand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HEAP_REALLOC_IN_PLACE_ONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_expand(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i64 @ROUND_SIZE(i64 %7)
  store i64 %8, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %19

13:                                               ; preds = %2
  %14 = call i32 (...) @GetProcessHeap()
  %15 = load i32, i32* @HEAP_REALLOC_IN_PLACE_ONLY, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i8* @HeapReAlloc(i32 %14, i32 %15, i8* %16, i64 %17)
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local i64 @ROUND_SIZE(i64) #1

declare dso_local i8* @HeapReAlloc(i32, i32, i8*, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
